# bench-ccl

./: BenchmarkAll2All.cpp  BenchmarkMain.cpp  CMakeLists.txt  README.md  mpi_wrapper.hpp  nccl_wrapper.hpp  oneccl_wrapper.hpp
cmake/: FindoneCCL.cmake
